--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -47,13 +46,14 @@
 
     </LinearLayout>
 
-    <TableLayout
-            android:id="@+id/table_layuot"
+    <GridLayout
+            xmlns:grid="http://schemas.android.com/apk/com.example.kovalik_homework2"
+            android:id="@+id/grid_layuot"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:stretchColumns="*"
             android:layout_above="@id/bottom_layout"
-            android:background="@android:color/darker_gray">
-    </TableLayout>
+            android:background="@android:color/darker_gray"
+            android:columnCount="@integer/gridColumnCount">
+    </GridLayout>
 
 </RelativeLayout>
