--- a/app/src/main/res/layout/data_cell.xml
+++ b/app/src/main/res/layout/data_cell.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/data_button"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:gravity="center"
-          android:layout_margin="@dimen/dataButtonMargin"
-          android:background="@android:color/white"
-          android:text="@string/cellName"
+
+<TextView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/data_button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:gravity="center"
+        android:layout_margin="@dimen/dataButtonMargin"
+        android:background="@android:color/white"
+        android:text="@string/cellName"
 />
 
 
