--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,8 @@
     <dimen name="bottomButtonMargin">2dp</dimen>
     <dimen name="dataButtonMargin">5dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="app_item_height">100dp</dimen>
+    <dimen name="app_item_height_list">60dp</dimen>
+    <dimen name="app_item_height_grid">90dp</dimen>
     <dimen name="app_item_margin">2dp</dimen>
     <dimen name="app_item_padding">2dp</dimen>
 </resources>
