--- a/app/src/main/res/layout/app_item_grid.xml
+++ b/app/src/main/res/layout/app_item_grid.xml
@@ -3,13 +3,20 @@
               android:layout_width="match_parent"
               android:layout_height="@dimen/app_item_height_grid"
               android:orientation="vertical">
-    <ImageView
-            android:id="@+id/app_item_image"
+    <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_margin="@dimen/app_item_margin"/>
-
+            android:orientation="horizontal">
+        <CheckBox
+                style="@style/app_on_top_checkbox_all"
+                android:id="@+id/app_on_top"/>
+        <ImageView
+                android:id="@+id/app_item_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:layout_margin="@dimen/app_item_margin"/>
+    </LinearLayout>
     <TextView
             android:id="@+id/app_item_text"
             android:layout_width="match_parent"
