--- a/app/src/main/res/layout/data_cell.xml
+++ b/app/src/main/res/layout/data_cell.xml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:grid="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/data_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dataButtonMargin"
-        android:background="@android:color/white"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_rowWeight="1"
-        android:text="@string/cellName">
-</TextView>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:grid="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/app_button"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_margin="@dimen/dataButtonMargin"
+              android:background="@android:color/white"
+              android:gravity="center"
+              grid:layout_columnWeight="1"
+              grid:layout_rowWeight="1"
+              android:orientation="vertical">
+    <ImageView
+            android:id="@+id/app_on_top_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="@dimen/app_item_margin"/>
+
+    <TextView
+            android:id="@+id/app_on_top_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom|center_horizontal"
+            android:gravity="center_horizontal"
+            android:padding="@dimen/app_item_padding"
+            android:text="Add App"/>
+</LinearLayout>
+
 
 
