--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,19 @@
         <item name="android:background">@android:color/white</item>
     </style>
 
+    <style name="app_on_top_checkbox">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">left|center_vertical</item>
+    </style>
+
+    <style name="app_on_top_checkbox_checked" parent="app_on_top_checkbox">
+        <item name="android:enabled">true</item>
+    </style>
+
+    <style name="app_on_top_checkbox_all" parent="app_on_top_checkbox">
+        <item name="android:enabled">true</item>
+    </style>
+
+
 </resources>
