--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorDelPanelActive">@android:color/holo_red_light</color>
+    <color name="colorDelPanelNotActive">@android:color/darker_gray</color>
 </resources>
