--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.oleg.kovalik_homework2.MainActivity">
+        tools:context=".ui.MainActivity">
     <LinearLayout
             android:id="@+id/bottom_layout"
             android:orientation="horizontal"
